--- a/tests/source.yaml
+++ b/tests/source.yaml
@@ -37,7 +37,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "external_ref.yaml#/components/schemas/Pets"
+                $ref: "external_refs/external_ref.yaml#/components/schemas/Pets"
         default:
           description: unexpected error
           content:
