--- a/tests/external_refs/external_ref.yaml
+++ b/tests/external_refs/external_ref.yaml
@@ -1,17 +1,22 @@
 components:
   schemas:
-    Pet:
+    NewPet:
       required:
-        - id
         - name
       properties:
-        id:
-          type: integer
-          format: int64
         name:
           type: string
         tag:
           type: string
+    Pet:
+      allOf:
+        - $ref: '#/components/schemas/NewPet'
+        - required:
+          - id
+          properties:
+            id:
+              type: integer
+              format: int64
     Pets:
       type: array
       items:
