--- a/tests/source.yaml
+++ b/tests/source.yaml
@@ -38,6 +38,14 @@ paths:
             application/json:
               schema:
                 $ref: "external_refs/external_ref.yaml#/components/schemas/Pets"
+        '400':
+          description: Unexpected error with result
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/Error"
+                  - $ref: "#/components/schemas/ErrorCode"
         default:
           description: unexpected error
           content:
@@ -55,4 +63,8 @@ components:
           type: integer
           format: int32
         message:
+          type: string
+    ErrorCode:
+      properties:
+        result:
           type: string
